--- a/app/components/viral/dialog/header_component.html.erb
+++ b/app/components/viral/dialog/header_component.html.erb
@@ -6,6 +6,7 @@
     <button
       type="button"
       class="dialog--close"
+      data-viral--dialog-target="close"
       data-action="
         <%= system_arguments[:close_action]%>
         click->viral--dialog#close
