--- a/app/components/viral/dialog/header_component.html.erb
+++ b/app/components/viral/dialog/header_component.html.erb
@@ -2,7 +2,7 @@
   <h1 class="dialog--title">
     <%= title %>
   </h1>
-  <%- if closable %>
+  <% if closable %>
     <button
       type="button"
       class="dialog--close"
