--- a/app/components/viral/form/prefixed/text_input_component.html.erb
+++ b/app/components/viral/form/prefixed/text_input_component.html.erb
@@ -1,20 +1,9 @@
 <div class="flex">
   <span
     class="
-      inline-flex
-      items-center
-      px-3
-      text-sm
-      text-slate-900
-      bg-slate-200
-      border
-      rounded-e-0
-      border-slate-300
-      rounded-s-md
-      dark:bg-slate-600
-      dark:text-slate-300
-      dark:border-slate-600
-      font-mono
+      inline-flex items-center px-3 text-sm text-slate-900 bg-slate-200 border
+      rounded-e-0 border-slate-300 rounded-s-md dark:bg-slate-600 dark:text-slate-300
+      dark:border-slate-600 font-mono
     "
   >
     <%= prefix %>
@@ -24,28 +13,10 @@
                   value:,
                   pattern:,
                   required:,
+                  data: {
+                    metadata:,
+                  },
                   class:
-                    "
-                    rounded-none
-                    rounded-e-lg
-                    bg-slate-50
-                    border
-                    text-slate-900
-                    focus:ring-primary-500
-                    focus:border-primary-500
-                    block
-                    flex-1
-                    min-w-0
-                    w-full
-                    text-sm
-                    border-slate-300
-                    p-2.5
-                    dark:bg-slate-700
-                    dark:border-slate-600
-                    dark:placeholder-slate-400
-                    dark:text-white
-                    dark:focus:ring-primary-500
-                    dark:focus:border-primary-500
-              " %>
+                    "rounded-none rounded-e-lg bg-slate-50 border text-slate-900 focus:ring-primary-500 focus:border-primary-500 block flex-1 min-w-0 w-full text-sm border-slate-300 p-2.5 dark:bg-slate-700 dark:border-slate-600 dark:placeholder-slate-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" %>
 
 </div>
